--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22> <text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
     <meta charset="utf-8">
 
-    <meta name="description" content="GAN that can generate and interpolate inside a browser">
+    <meta name="description" content="A GAN inside a browser that can explore its latent space">
     <meta name="keywords" content="Browser GAN MNIST generate interpolate deep machine">
     <meta name="author" content="Mazeyar Moeini Feizabadi">
   </head>
